@@ -3,7 +3,7 @@
  *   nano.c                                                               *
  *                                                                        *
  *   Copyright (C) 1999, 2000, 2001, 2002, 2003, 2004 Chris Allegretta    *
- *   Copyright (C) 2005, 2006, 2007 David Lawrence Ramsey                 *
+ *   Copyright (C) 2005, 2006, 2007 Free Software Foundation, Inc.        *
  *   This program is free software; you can redistribute it and/or modify *
  *   it under the terms of the GNU General Public License as published by *
  *   the Free Software Foundation; either version 3, or (at your option)  *
@@ -882,7 +882,7 @@ void version(void)
     printf(_(" GNU nano version %s (compiled %s, %s)\n"), VERSION,
 	__TIME__, __DATE__);
     printf(" (C) 1999, 2000, 2001, 2002, 2003, 2004 Chris Allegretta\n");
-    printf(" (C) 2005, 2006, 2007 David Lawrence Ramsey\n");
+    printf(" (C) 2005, 2006, 2007 Free Software Foundation, Inc.\n");
     printf(
 	_(" Email: nano@nano-editor.org	Web: http://www.nano-editor.org/"));
     printf(_("\n Compiled options:"));
