@@ -3,7 +3,7 @@
  *   winio.c                                                              *
  *                                                                        *
  *   Copyright (C) 1999, 2000, 2001, 2002, 2003, 2004 Chris Allegretta    *
- *   Copyright (C) 2005, 2006, 2007 David Lawrence Ramsey                 *
+ *   Copyright (C) 2005, 2006, 2007 Free Software Foundation, Inc.        *
  *   This program is free software; you can redistribute it and/or modify *
  *   it under the terms of the GNU General Public License as published by *
  *   the Free Software Foundation; either version 3, or (at your option)  *
@@ -3339,7 +3339,7 @@ void do_credits(void)
 	"",
 	"",
 	"(C) 1999, 2000, 2001, 2002, 2003, 2004 Chris Allegretta",
-	"(C) 2005, 2006, 2007 David Lawrence Ramsey",
+	"(C) 2005, 2006, 2007 Free Software Foundation, Inc.",
 	"",
 	"",
 	"",
